--- a/cxxfast-rest/src/main/resources/application.yml
+++ b/cxxfast-rest/src/main/resources/application.yml
@@ -5,7 +5,7 @@ server:
         max-threads: 1000
         min-spare-threads: 30
     port: 8081
-    context-path: /jeefast-rest
+    context-path: /cxxfast-rest
 
 # mysql
 spring:
