--- a/cxxfast-system/src/main/resources/application.yml
+++ b/cxxfast-system/src/main/resources/application.yml
@@ -5,7 +5,7 @@ server:
         max-threads: 1000
         min-spare-threads: 30
     port: 8080
-    context-path: /jeefast
+    context-path: /cxxfast
 
 # mysql
 spring:
